syntax = "proto3";

package hello;

message HelloRequest {
  string name = 1;

}

message HelloReponse {
    string message = 1;
}

service HelloWorld {
  // One request followed by multiple responses, set by the batch size.
  rpc sayHello(HelloRequest) returns (HelloReponse);

  rpc sayHelloAgain(HelloRequest) returns (HelloReponse);
}
